# depx

./: .bandit  .gitignore  .travis.yml  LICENSE  Makefile  README.md  graph.graphml  pyproject.toml  report.html  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_test.in  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
depx/: __init__.py  cli.py  format.json  graph.py  parsing.py  template.html
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: test_depx.py  test_graph.py  test_parsing.py
tests/fake_project/another_fake_module/: missing_creativity.py
tests/fake_project/fake_module/: __init__.py
tests/fake_project/py27/: setup.py
tests/fake_project/py27/fake_module/: __init__.py  a_module.py
tests/fake_project/py27/random_folder/: python_file_without_py_extension.txt
tests/fake_project/py3/fake_module/: a_module.py  another_module.py
tests/project_py27/another_fake_module/: missing_creativity.py
tests/project_py27/fake_module/: another_module.py
